ui/app/pages/swaps/view-quote/index.scss
.view-quote {
  display: flex;
  flex-flow: column;
  align-items: center;
  flex: 1;
  width: 100%;
  padding-left: 20px;
  padding-right: 20px;

  &__content {
    display: flex;
    flex-flow: column;
    align-items: center;
    width: 311px;
    height: 100%;

    @media screen and (max-width: 576px) {
      overflow-y: scroll;
      max-height: 388px;
    }
  }

  @media screen and (min-width: 576px) {
    width: 348px;
  }

  &__new-quote-countdown {
    @include H7;

    font-weight: bold;

    &--danger {
      span {
        color: $Red-500;
      }
    }
  }

  &__view-other-button-container {
    border-radius: 28px;
    margin-top: 38px;
    width: 100%;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;

    @media screen and (min-width: 576px) {
      margin-top: auto;
    }
  }

  &__view-other-button,
  &__view-other-button-fade {
    display: flex;
    align-items: center;
    margin-bottom: 16px;
    position: absolute;

    @include H7;

    color: white;
    font-weight: bold;
    cursor: pointer;
    border: 1px solid;
    border-radius: 28px;
    padding: 5px 18px;
    background: linear-gradient(90deg, $Blue-500 0%, $Blue-400 101.32%);


    @media screen and (min-width: 576px) {
      @include H6;

      margin-bottom: 0;
    }

    .fa-arrow-right {
      margin-left: 4px;
      font-size: 10px;
      margin-top: 2px;
    }
  }

  &__view-other-button-fade {
    background: #0372c3;
    opacity: 0;
    transition: opacity ease-in-out 1s;

    &:hover {
      opacity: 1;
    };
  }

  &__insufficient-eth-warning-wrapper {
    margin-top: 8px;
    width: 100%;
    align-items: center;
    justify-content: center;

    @media screen and (min-width: 576px) {
      min-height: 36px;
      display: flex;
    }
  }

  &__bold {
    font-weight: bold;
  }

  &__countdown-timer-container {
    @media screen and (max-width: 576px) {
      margin-top: 12px;
      margin-bottom: 16px;

      &--thin {
        margin-top: 8px;
        margin-bottom: 8px;

        > div {
          margin-top: 0;
          margin-bottom: 0;
        }
      }
    }

    @media screen and (min-width: 576px) {
      &--thin {
        margin-top: 6px;
      }
    }
  }

  &__fee-card-container {
    width: 100%;
    margin-top: auto;
    margin-bottom: 8px;

    @media screen and (max-width: 576px) {
      margin-top: 16px;
    }

    @media screen and (min-width: 576px) {
      margin-bottom: 0;

      &--three-rows {
        margin-bottom: -16px;
      }
    }
  }

  &__main-quote-summary-container {
    margin-top: 24px;

    @media screen and (max-width: 576px) {
      margin-top: 0;
    }

    &--thin {
      margin-top: 8px;
    }
  }
}

